@@ -1,7 +1,6 @@
 package com.backendfunction.post.dto;
 
 import com.backendfunction.commet.dto.CommentDto;
-import com.backendfunction.post.constant.Category;
 import com.backendfunction.post.entity.Post;
 import lombok.AllArgsConstructor;
 import lombok.Data;
@@ -9,6 +8,7 @@ import lombok.NoArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @AllArgsConstructor
@@ -18,8 +18,12 @@ public class PostDto {
     private String content;
     private String title;
     private String price;
-    private Category category;
     private List<CommentDto> commentDtos = new ArrayList<>();
+    private List<String> imgs;
+
+    public PostDto(Post post) {
+        this.id = post.getId();
+    }
 
     public static PostDto fromEntity(Post post) {
         return new PostDto(
@@ -27,8 +31,8 @@ public class PostDto {
                 post.getContent(),
                 post.getTitle(),
                 post.getPrice(),
-                post.getCategory(),
-                post.getCommentList().stream().map(x -> CommentDto.fromEntity(x)).toList()
+                post.getCommentList().stream().map(x -> CommentDto.fromEntity(x)).toList(),
+                post.getImages().stream().map(image->image.getImage()).collect(Collectors.toList())
         );
     }
 
@@ -38,7 +42,6 @@ public class PostDto {
         post.setContent(dto.getContent());
         post.setTitle(dto.getTitle());
         post.setPrice(dto.getPrice());
-        post.setCategory(dto.getCategory());
         return post;
     }
 
